# credlens

./: .gitignore  .gitleaks.toml  .vercelignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  secrets.yml
api/: probe.py
corpus/: labels.json  manifest.json  mutations.json
docs/: index.md  positioning.md
docs/adr/: 0001-tree-sitter-engine.md  0002-finding-vs-inventory.md  0003-hosted-output-publication-semantics.md  index.md
docs/plan/: index.md  plan.md
docs/research/: index.md  poc-result.md
docs/research/poc/: findings.json  scanner.py
docs/specs/: credential-lens.md  hosted-scan-schema.json  hosted-scan.md  index.md
docs/status/: DECISIONS.md  HANDOFF.md  QUESTIONS.md  REVIEW_NOTES.md  RISKS.md  TASKS.md  TEST_LOG.md  index.md
docs/status/checkpoints/: 20260714-190334-credlens-phase2-complete-next-phase3-or-launch-post.md  20260714-234400-phase3-scan-core-done-next-web-surface.md
eval/: floor.json  report.md  results.json
scripts/: fetch_corpus.py  plant_mutations.py
src/credlens/: __init__.py  scan.py
src/credlens/detectors/: __init__.py  base.py  baseline.py  credential.py  leastpriv.py
src/credlens/eval/: __init__.py
src/credlens/hosted/: __init__.py  extract.py  fetch.py  frame.py  limits.py  redact.py  runner.py  validate.py  worker.py
tests/: test_credential_fixtures.py  test_eval.py  test_labels.py  test_leastpriv.py  test_mutations.py  test_smoke.py
tests/hosted/: tars.py  test_extract.py  test_fetch.py  test_redact.py  test_runner.py  test_validate.py
(+12 files in other folders)
