[project]
name = "credlens"
version = "0.1.0"
description = "Precision-first, eval-backed security auditor for MCP servers — credential & least-privilege lens"
readme = "README.md"
authors = [
    { name = "Daniel Moon", email = "moonman@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.26.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.urls]
Repository = "https://github.com/dmoon57/credlens"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# docs/ holds preserved research artifacts (the throwaway POC) — provenance, not project source
extend-exclude = ["docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vercel]
entrypoint = "api.probe:handler"
